Remove PHP files and references

--- a/room-details-booking.html
+++ b/room-details-booking.html
@@ -352,7 +352,7 @@
                 <div class="col-xl-7">
                     <div data-cue="slideInUp">
                         <div id="message-booking"></div>
-                        <form method="post" action="phpmailer/reserve_template_email.php" id="bookingform" autocomplete="off">
+                        <form method="post" action="#" id="bookingform" autocomplete="off">
                             <div class="booking_wrapper">
                                 <div class="col-12">
                                     <input type="hidden" id="date_booking" name="date_booking">
