--- a/DeluxeSingleRoom.html
+++ b/DeluxeSingleRoom.html
@@ -193,7 +193,7 @@
                     <div id="newsletter">
                         <h5>Newsletter</h5>
                         <div id="message-newsletter"></div>
-                        <form method="post" action="#" name="newsletter_form" id="newsletter_form">
+                        <form method="post" action="phpmailer/newsletter_template_email.php" name="newsletter_form" id="newsletter_form">
                             <div class="form-group">
                                 <input type="email" name="email_newsletter" id="email_newsletter" class="form-control" placeholder="Your email">
                                 <button type="submit" id="submit-newsletter"><i class="bi bi-send"></i></button>
