--- a/about.html
+++ b/about.html
@@ -130,12 +130,12 @@
                                       <p>Savor authentic Sri Lankan cuisine prepared with fresh, local ingredients at our on-site restaurant. Our expert chefs craft traditional and contemporary dishes, offering a delightful culinary experience.</p>
                                   </li>
                                   <li data-cue="slideInUp" data-delay="300">
-                                      <h5>Explore Ella’s Dining Scene:</h5>
+                                      <h5>Explore Ella's Dining Scene:</h5>
                                       <p>Beyond our in-house restaurant, Ella boasts a variety of eateries catering to diverse tastes. From cozy cafés serving aromatic Ceylon tea to vibrant restaurants offering international flavors, you can indulge in everything from local rice and curry to wood-fired pizzas and fresh seafood. Popular spots include Café Chill, Ella Flower Garden, and Matey Hut, each providing a unique dining experience.</p>
                                   </li>
                                   <li data-cue="slideInUp" data-delay="400">
                                       <h5>Nature Surroundings: </h5>
-                                      <p>Immerse yourself in the tranquil beauty of Ella’s lush landscapes, right at our doorstep. Enjoy breathtaking views, fresh mountain air, and easy access to scenic trails leading to iconic locations like Little Adam’s Peak and Nine Arches Bridge.</p>
+                                      <p>Immerse yourself in the tranquil beauty of Ella's lush landscapes, right at our doorstep. Enjoy breathtaking views, fresh mountain air, and easy access to scenic trails leading to iconic locations like Little Adam's Peak and Nine Arches Bridge.</p>
                                   </li>
                                   <li data-cue="slideInUp" data-delay="400">
                                     <h5>Haze Recreation Facility:  </h5>
@@ -250,7 +250,7 @@
                 <div id="newsletter">
                     <h5>Newsletter</h5>
                     <div id="message-newsletter"></div>
-                    <form method="post" action="phpmailer/newsletter_template_email.php" name="newsletter_form" id="newsletter_form">
+                    <form method="post" action="#" name="newsletter_form" id="newsletter_form">
                         <div class="form-group">
                             <input type="email" name="email_newsletter" id="email_newsletter" class="form-control" placeholder="Your email">
                             <button type="submit" id="submit-newsletter"><i class="bi bi-send"></i></button>
