--- a/room-details-booking.html
+++ b/room-details-booking.html
@@ -352,7 +352,7 @@
                 <div class="col-xl-7">
                     <div data-cue="slideInUp">
                         <div id="message-booking"></div>
-                        <form method="post" action="phpmailer/reserve_template_email.php" id="bookingform" autocomplete="off">
+                        <form method="post" action="#" id="bookingform" autocomplete="off">
                             <div class="booking_wrapper">
                                 <div class="col-12">
                                     <input type="hidden" id="date_booking" name="date_booking">
@@ -466,7 +466,7 @@
                     <div id="newsletter">
                         <h5>Newsletter</h5>
                         <div id="message-newsletter"></div>
-                        <form method="post" action="phpmailer/newsletter_template_email.php" name="newsletter_form" id="newsletter_form">
+                        <form method="post" action="#" name="newsletter_form" id="newsletter_form">
                             <div class="form-group">
                                 <input type="email" name="email_newsletter" id="email_newsletter" class="form-control" placeholder="Your email">
                                 <button type="submit" id="submit-newsletter"><i class="bi bi-send"></i></button>
@@ -499,7 +499,6 @@
 <script src="js/common_scripts.js"></script>
 <script src="js/common_functions.js"></script>
 <script src="js/datepicker_inline.js"></script>
-<script src="phpmailer/validate.js"></script>
 <script>
     // Progress bars animation
     $(function() {
