--- a/404.html
+++ b/404.html
@@ -35,6 +35,8 @@
         <div data-loader="circle-side"></div>
     </div><!-- /Page Preload -->
 
+    <div id="navbar-placeholder"></div>
+
     <main>
         <div class="container">
             <div class="row error_page">
@@ -207,6 +209,8 @@
         </div>
     </main>
 
+    <div id="footer-placeholder"></div>
+
     <div class="progress-wrap">
         <svg class="progress-circle svg-content" width="100%" height="100%" viewBox="-1 -1 102 102">
             <path d="M50,1 a49,49 0 0,1 0,98 a49,49 0 0,1 0,-98"/>
@@ -216,6 +220,7 @@
 
 
 <!-- COMMON SCRIPTS -->
+<script src="js/components.js"></script>
 <script src="js/common_scripts.js"></script>
 <script src="js/common_functions.js"></script>
 
