Fix navbar and footer loading issues

--- a/index.html
+++ b/index.html
@@ -380,8 +380,23 @@
     <!-- /back to top -->
 
 <!-- COMMON SCRIPTS -->
+<script src="js/jquery-3.7.1.min.js"></script>
+<script src="js/bootstrap.bundle.min.js"></script>
+<script src="js/jarallax.min.js"></script>
+<script src="js/jarallax-video.min.js"></script>
+<script src="js/jarallax-element.min.js"></script>
+<script src="js/Headroom.js"></script>
+<script src="js/scrollCue.min.js"></script>
+<script src="js/owl.carousel.min.js"></script>
+<script src="js/jquery.flexslider.min.js"></script>
+<script src="js/slider_func.js"></script>
+<script src="js/fslightbox.js"></script>
+<script src="js/isotope.min.js"></script>
+<script src="js/footer-reveal.min.js"></script>
+<script src="js/jquery.nice-select.min.js"></script>
+<script src="js/jquery.theia.sticky.sidebar.js"></script>
+<script src="js/easepick.js"></script>
 <script src="js/components.js"></script>
-<script src="js/common_scripts.js"></script>
 <script src="js/common_functions.js"></script>
 <script src="js/datepicker_inline.js"></script>
 
