Add missing JavaScript libraries to About Us page

--- a/about.html
+++ b/about.html
@@ -268,9 +268,17 @@
             © Ceylon Happy Laugh - by <a href="#">Naveen</a>
         </div>
     </div>
+<script src="js/jquery-3.7.1.min.js"></script>
+<script src="js/bootstrap.bundle.min.js"></script>
+<script src="js/jarallax.min.js"></script>
+<script src="js/jarallax-video.min.js"></script>
+<script src="js/jarallax-element.min.js"></script>
+<script src="js/scrollCue.min.js"></script>
+<script src="js/Headroom.js"></script>
+<script src="js/owl.carousel.min.js"></script>
+<script src="js/footer-reveal.min.js"></script>
 </footer>
     <!-- /footer -->
-
 
 </body>
 </html>
