Add rooms and amenities sections to About Us page

--- a/about.html
+++ b/about.html
@@ -194,6 +194,103 @@
         </div>
         <!-- /bg_white -->
 
+        <div class="container margin_120_95">
+            <div class="row justify-content-between d-flex align-items-center add_bottom_90">
+                <div class="col-lg-6">
+                    <div class="pinned-image rounded_container pinned-image--small mb-4">
+                        <div class="pinned-image__container">
+                            <img src="img/rooms/image1.jpg" alt="">
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-5">
+                    <div class="title">
+                        <small>Accommodation</small>
+                        <h3>Thoughtfully Designed Spaces</h3>
+                        <p>Each room at Ceylon Happy Laugh has been carefully designed to provide the perfect balance of comfort and connection with nature. From intimate single retreats to spacious family accommodations, our rooms feature modern amenities while preserving the authentic charm of hill country living.</p>
+                        <p>Wake up to misty mountain views, enjoy your morning tea on private balconies, and fall asleep to the gentle sounds of the surrounding forest. Every space tells a story of Sri Lankan craftsmanship and hospitality.</p>
+                        <p><a href="room-list-1.html" class="btn_1 outline mt-2">Explore Our Rooms</a></p>
+                    </div>
+                </div>
+            </div>
+            <!-- /row-->
+            <div class="row justify-content-between d-flex align-items-center">
+                <div class="col-lg-6 order-lg-2">
+                    <div class="pinned-image rounded_container pinned-image--small mb-4">
+                        <div class="pinned-image__container">
+                            <img src="img/rooms/2_b.jpg" alt="">
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-5 order-lg-1">
+                    <div class="title">
+                        <small>Comfort & Convenience</small>
+                        <h3>Modern Amenities in Natural Settings</h3>
+                        <p>We believe that being close to nature shouldn't mean compromising on comfort. Our property features contemporary amenities seamlessly integrated into the natural landscape, ensuring your stay is both peaceful and convenient.</p>
+                        <p>From high-speed Wi-Fi for digital nomads to cozy common areas perfect for socializing, every amenity has been chosen to enhance your Ella experience while respecting the environment.</p>
+                    </div>
+                </div>
+            </div>
+            <!-- /row-->
+        </div>
+        <!-- /container-->
+
+        <div class="bg_white">
+            <div class="container margin_120_95">
+                <div class="title text-center mb-5">
+                    <small data-cue="slideInUp">What Makes Us Special</small>
+                    <h2 data-cue="slideInUp" data-delay="100">Our Unique Amenities</h2>
+                </div>
+                <div class="row mt-4">
+                    <div class="col-xl-4 col-md-6">
+                        <div class="box_facilities" data-cue="slideInUp">
+                            <i class="customicon-breakfast"></i>
+                            <h3>Farm-to-Table Breakfast</h3>
+                            <p>Start your day with fresh, locally sourced ingredients prepared in traditional Sri Lankan style, featuring seasonal fruits and homemade specialties.</p>
+                        </div>
+                    </div>
+                    <div class="col-xl-4 col-md-6">
+                        <div class="box_facilities" data-cue="slideInUp" data-delay="100">
+                            <i class="icon-hotel-patio"></i>
+                            <h3>Panoramic Viewing Decks</h3>
+                            <p>Multiple outdoor spaces designed for relaxation and contemplation, offering unobstructed views of Ella's famous peaks and valleys.</p>
+                        </div>
+                    </div>
+                    <div class="col-xl-4 col-md-6">
+                        <div class="box_facilities" data-cue="slideInUp" data-delay="200">
+                            <i class="customicon-luggage"></i>
+                            <h3>Adventure Concierge</h3>
+                            <p>Our local team provides personalized recommendations and assistance for hiking trails, cultural experiences, and hidden gems around Ella.</p>
+                        </div>
+                    </div>
+                    <div class="col-xl-4 col-md-6">
+                        <div class="box_facilities" data-cue="slideInUp" data-delay="300">
+                            <i class="customicon-laundry"></i>
+                            <h3>Eco-Friendly Services</h3>
+                            <p>Sustainable laundry and housekeeping services using environmentally conscious products and practices that protect Ella's pristine environment.</p>
+                        </div>
+                    </div>
+                    <div class="col-xl-4 col-md-6">
+                        <div class="box_facilities" data-cue="slideInUp" data-delay="400">
+                            <i class="icon-hotel-coffee"></i>
+                            <h3>Ceylon Tea Experience</h3>
+                            <p>Complimentary premium Ceylon tea service throughout the day, featuring locally grown varieties and traditional brewing methods.</p>
+                        </div>
+                    </div>
+                    <div class="col-xl-4 col-md-6">
+                        <div class="box_facilities" data-cue="slideInUp" data-delay="500">
+                            <i class="customicon-reception"></i>
+                            <h3>24/7 Local Support</h3>
+                            <p>Round-the-clock assistance from our friendly local staff who are passionate about sharing their knowledge of Ella and Sri Lankan culture.</p>
+                        </div>
+                    </div>
+                </div>
+                <!-- /Row -->
+            </div>
+            <!-- /container-->
+        </div>
+        <!-- /bg_white -->
+
         <div class="container margin_120_95" id="booking_section">
             <div class="row justify-content-center">
                 <div class="col-xl-6 text-center">
