Add missing theiaStickySidebar plugin

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     
     <!-- Plugin Scripts -->
     <script src="/js/owl.carousel.min.js"></script>
+    <script src="/js/jquery.theia.sticky.sidebar.min.js"></script>
     <script src="/js/jarallax.min.js"></script>
     <script src="/js/jarallax-video.min.js"></script>
     <script src="/js/jarallax-element.min.js"></script>
